Squashed commit of the following:
commit 6cfd4da788774c4e5d840ceadcc2ca36ec4ee44c
Author: Birk Nordbo <36029360+nordbobirk@users.noreply.github.com>
Date:   Mon Mar 3 18:40:53 2025 +0100

    fix wall drawing for south-facing walls

commit 5dcfed2bf154f8522e48d66202da90009360b03a
Merge: 3fa7690 bbb5906
Author: Birk Nordbo <36029360+nordbobirk@users.noreply.github.com>
Date:   Mon Mar 3 18:08:09 2025 +0100

    Merge branch 'walls' into BoardFacory

commit bbb5906435f652c6dc38fb1b880577b9d1f858e6
Author: Mesterbob06 <s233965@student.dtu.dk>
Date:   Mon Mar 3 18:02:55 2025 +0100

    implemented Draw wall :)

commit 3fa769028d2abf1d3076b5b6a5fcb6fdbe62d7bf
Author: Birk Nordbo <36029360+nordbobirk@users.noreply.github.com>
Date:   Mon Mar 3 17:59:35 2025 +0100

    fix advanced board too big for small screen

commit b5ee8ba32711e493fbd401b3bf133976aceaf97e
Merge: 2edffda 713caa1
Author: Birk Nordbo <36029360+nordbobirk@users.noreply.github.com>
Date:   Mon Mar 3 17:55:55 2025 +0100

    Merge remote-tracking branch 'origin/checksAndBelts' into BoardFacory

commit 2edffda84d7afc43da882a2a44d42c0fa7e495c3
Author: Birk Nordbo <36029360+nordbobirk@users.noreply.github.com>
Date:   Mon Mar 3 17:47:52 2025 +0100

    add missing javadocs

commit 713caa17c4b1c22d4618d7afd32d4351ef6adaf1
Author: Raaschou <168561326+Raaschou@users.noreply.github.com>
Date:   Mon Mar 3 08:43:31 2025 +0100

    Added a couple of comments and a test for checkpoints

commit e610e028e6fe802f61a506706af8f1268bfc8847
Author: Raaschou <168561326+Raaschou@users.noreply.github.com>
Date:   Mon Mar 3 08:31:39 2025 +0100

    Implemented drawing sequence numbers on checkpoints and correct rotation on belts

commit 0b8bb650e395a12809da99b73c47aef55f44fa98
Author: Raaschou <168561326+Raaschou@users.noreply.github.com>
Date:   Fri Feb 28 17:51:21 2025 +0100

    drawActions() draws in correct locations, needs to get heading and number implemented as well

commit f128d06fdf1a9af357d7a0646bd2c8b97f9db63b
